--- a/frontend/Active-learning-project/src/index.html
+++ b/frontend/Active-learning-project/src/index.html
@@ -26,6 +26,7 @@
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
 </head>
 <body>
   <body class="mat-typography">
