--- a/frontend/Active-learning-project/src/index.html
+++ b/frontend/Active-learning-project/src/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <body class="mat-typography">
